[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,28 +4,41 @@
             Article One : Sanyog Sharma
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+            .container{
+                margin: 0 auto;
+                max-width: 800px;
+                color: #4a4a4a;
+                font-family: sans-serif;
+                padding-top: 60px;
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article One
-        </h3>
-        <div>
-            August 15,2017
-        </div>
-        <div>
-            <p>
-                This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.
-            </p>
-            <p>
-                This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.
-            </p>
-            <p>
-                This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.
-            </p>            
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article One
+            </h3>
+            <div>
+                August 15,2017
+            </div>
+            <div>
+                <p>
+                    This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.
+                </p>
+                <p>
+                    This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.
+                </p>
+                <p>
+                    This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.This is the content of my first aricle.
+                </p>            
+            </div>
         </div>
     </body>
 </html>
