--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,28 +4,31 @@
             Article Three : Sanyog Sharma
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article Three
-        </h3>
-        <div>
-            August 15,2017
-        </div>
-        <div>
-            <p>
-                This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.
-            </p>
-            <p>
-                This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.
-            </p>
-            <p>
-                This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.
-            </p>            
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article Three
+            </h3>
+            <div>
+                August 15,2017
+            </div>
+            <div>
+                <p>
+                    This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.
+                </p>
+                <p>
+                    This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.
+                </p>
+                <p>
+                    This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.This is the content of my third aricle.
+                </p>            
+            </div>
         </div>
     </body>
 </html>
