[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,24 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id= "madi" src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div id ="main text" class="center text-big bold">
-            Hi! I am Sanyog Sharma and this is my first webapp.
+        <div>
+            <div class="center">
+                <img id= "madi" src="/ui/madi.png" class="img-medium"/>
+            </div>
+            <hr/>
+            <br>
+            <h4>Personal</h4>
+            <div>
+                Hi! I am Sanyog Sharma and this is my first webapp.
+            </div>
+            <h4>Professional</h4>
+            <br>
+            <div>
+                I am a Student.
+            </div>
+            <hr/>
+            <div class="footer">
+            </div>
         </div>
         <script>
             alert('Hi, I am Javascript.');
