--- a/ui/index.html
+++ b/ui/index.html
@@ -21,6 +21,7 @@
             </div>
             <hr/>
             <div class="footer">
+                This  button<button id="counter">Click me</button> has been clicked<spam id="count">0</spam> times.
             </div>
         </div>
         <script>
