--- a/ui/index.html
+++ b/ui/index.html
@@ -22,6 +22,13 @@
             <hr/>
             <div class="footer">
                 This  button<button id="counter">Click me</button> has been clicked<spam id="count">0</spam> times.
+                <input id="name" type="text" placeholder="name"></input>
+                <input type="submit" value="Submit"></input>
+                <ul>
+                    <li>name 1</li>
+                    <li>name 2</li>
+                    <li>name 3</li>
+                </ul>
             </div>
         </div>
         <script>
