--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
                 This  button<button id="counter">Click me</button> has been clicked<spam id="count">0</spam> times.
                 <hr/>
                 <input id="name" type="text" placeholder="name"></input>
-                <input type="submit" value="Submit"></input>
+                <input id="submit_btn" type="submit" value="Submit"></input>
                 <ul>
                     <li>name 1</li>
                     <li>name 2</li>
