--- a/ui/index.html
+++ b/ui/index.html
@@ -25,10 +25,7 @@
                 <hr/>
                 <input id="name" type="text" placeholder="name"></input>
                 <input id="submit_btn" type="submit" value="Submit"></input>
-                <ul>
-                    <li>name 1</li>
-                    <li>name 2</li>
-                    <li>name 3</li>
+                <ul id="namelist">
                 </ul>
             </div>
         </div>
