--- a/ui/index.html
+++ b/ui/index.html
@@ -20,13 +20,10 @@
                 I am a Student.
             </div>
             <hr/>
-            <div class="footer">
-                This  button<button id="counter">Click me</button> has been clicked<spam id="count">0</spam> times.
-                <hr/>
-                <input id="name" type="text" placeholder="name"></input>
-                <input id="submit-btn" type="submit" value="Submit"></input>
-                <ul id="namelist">
-                </ul>
+            <div>
+                <input type="text" id="username" placeholder="username" />
+                <input type="password" id="password" />
+                <input type="submit" id="submi_btn" />
             </div>
         </div>
         <script>
